better exports for oceans

--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Eve.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Eve.cfg
@@ -198,7 +198,7 @@
 		ScaledVersion
 		{
 			type = Atmospheric
-			fadeStart = 0
+			fadeStart = 105000
 			fadeEnd = 110000
 			sphericalModel = False
 			deferMesh = False
@@ -221,7 +221,7 @@
 				rimColorRamp = BUILTIN/purple_atmogradiant
 				rimColorRampScale = 1,1
 				rimColorRampOffset = 0,0
-				localLightDirection = -0.9999987,0,0.001594037,0
+				localLightDirection = -0.9999789,-1.30465E-07,0.006497742,0
 				resourceMapScale = 1,1
 				resourceMapOffset = 0,0
 			}
@@ -827,7 +827,7 @@
 					order = 100
 					enabled = True
 					name = _Material_AerialPerspective
-					index = 0
+					index = -1
 				}
 				RemoveQuadMap
 				{
@@ -838,7 +838,7 @@
 					order = 1
 					enabled = True
 					name = QuadRemoveMap
-					index = 0
+					index = -1
 				}
 			}
 		}
