--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Kerbin.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Kerbin.cfg
@@ -237,7 +237,7 @@
 		ScaledVersion
 		{
 			type = Atmospheric
-			fadeStart = 0
+			fadeStart = 55000
 			fadeEnd = 60000
 			sphericalModel = False
 			deferMesh = False
@@ -260,7 +260,7 @@
 				rimColorRamp = BUILTIN/AerialRampKerbin2
 				rimColorRampScale = 1,1
 				rimColorRampOffset = 0,0
-				localLightDirection = 0.001609981,0,0.9999987,0
+				localLightDirection = 0.003890932,-1.304649E-07,0.9999925,0
 				resourceMapScale = 1,1
 				resourceMapOffset = 0,0
 			}
@@ -325,7 +325,7 @@
 				fogColorRamp = BUILTIN/AerialRampKerbin2
 				fogColorRampScale = 1,1
 				fogColorRampOffset = 0,0
-				planetOpacity = 1
+				planetOpacity = 0
 				oceanFogDistance = 1000
 			}
 			FallbackMaterial
@@ -483,7 +483,7 @@
 							coveragePersistance = 0.5
 							coverageSeed = 121214
 							name = BaseBeach
-							latDelta = 0
+							latDelta = 1
 							latitudeDouble = True
 							lonDelta = 1
 							minimumRealHeight = 0
@@ -564,7 +564,7 @@
 							coveragePersistance = 0.5
 							coverageSeed = 14554
 							name = BaseLand
-							latDelta = 0
+							latDelta = 1
 							latitudeDouble = True
 							lonDelta = 1
 							minimumRealHeight = 0
@@ -721,7 +721,7 @@
 							coveragePersistance = 0.5
 							coverageSeed = 1247389
 							name = BaseSnow
-							latDelta = 1
+							latDelta = 0
 							latitudeDouble = True
 							lonDelta = 1
 							minimumRealHeight = 0
@@ -797,7 +797,7 @@
 							coveragePersistance = 0.5
 							coverageSeed = 121221
 							name = Tundra
-							latDelta = 1
+							latDelta = 0
 							latitudeDouble = True
 							lonDelta = 1
 							minimumRealHeight = 0
@@ -878,7 +878,7 @@
 							coveragePersistance = 0.6
 							coverageSeed = 44473
 							name = DesertGround
-							latDelta = 0
+							latDelta = 1
 							latitudeDouble = False
 							lonDelta = 0
 							minimumRealHeight = 0
@@ -964,9 +964,9 @@
 							coveragePersistance = 0.6
 							coverageSeed = 44473
 							name = DesertMountains
-							latDelta = 0
+							latDelta = 1
 							latitudeDouble = False
-							lonDelta = 0
+							lonDelta = 0.476008917228375
 							minimumRealHeight = 0
 							noiseBlend = 0.5
 							noiseColor = 0.2462686,0.2286743,0.2144087,1
@@ -1035,7 +1035,7 @@
 							coveragePersistance = 0.6
 							coverageSeed = 44473
 							name = RockyGround
-							latDelta = 0
+							latDelta = 1
 							latitudeDouble = False
 							lonDelta = 1
 							minimumRealHeight = 0
@@ -1116,7 +1116,7 @@
 							coveragePersistance = 0.7
 							coverageSeed = 44473
 							name = IceCaps
-							latDelta = 1
+							latDelta = 0
 							latitudeDouble = True
 							lonDelta = 1
 							minimumRealHeight = 20
@@ -1192,7 +1192,7 @@
 							coveragePersistance = 0.7
 							coverageSeed = 44473
 							name = Ocean Bottom
-							latDelta = 0
+							latDelta = 1
 							latitudeDouble = True
 							lonDelta = 1
 							minimumRealHeight = 0
@@ -1278,9 +1278,9 @@
 							coveragePersistance = 0.7
 							coverageSeed = 4563456
 							name = Savannah
-							latDelta = 0
+							latDelta = 0.505546780473614
 							latitudeDouble = False
-							lonDelta = 1
+							lonDelta = 0
 							minimumRealHeight = 0
 							noiseBlend = 1
 							noiseColor = 0.5,0.4645949,0.2627857,1
@@ -1592,18 +1592,6 @@
 					name = KSC2
 					index = 0
 				}
-				AerialPerspectiveMaterial
-				{
-					atmosphereDepth = 5000
-					DEBUG_SetEveryFrame = False
-					globalDensity = -7.5E-06
-					heightFalloff = 0.2
-					oceanDepth = 0
-					order = 100
-					enabled = True
-					name = _Material_AerialPerspective
-					index = 1
-				}
 				FlattenArea
 				{
 					DEBUG_showColors = False
@@ -1646,22 +1634,22 @@
 			oceanColor = 0,0,0,1
 			oceanHeight = 0
 			density = 1
-			minLevel = 1
+			minLevel = 2
 			maxLevel = 7
-			minDetailDistance = 8
+			minDetailDistance = 6
 			maxQuadLengthsPerFrame = 0.03
 			Material
 			{
 				color = 0.4509804,0.5254902,0.5254902,1
 				colorFromSpace = 0.06959084,0.1021004,0.1567164,1
-				specColor = 0,0,0,1
+				specColor = 1,1,1,1
 				shininess = 0.697751
 				gloss = 0.2
 				tiling = 1000
-				waterTex = BUILTIN/sea-water2
+				waterTex = BUILTIN/sea-water1
 				waterTexScale = 1,1
 				waterTexOffset = 0,0
-				waterTex1 = BUILTIN/sea-water3
+				waterTex1 = BUILTIN/sea-water2
 				waterTex1Scale = 1,1
 				waterTex1Offset = 0,0
 				bTiling = 800
@@ -1671,7 +1659,7 @@
 				displacement = 0.05
 				texDisplacement = -0.31
 				dispFreq = 0.15
-				mix = 0.2947066
+				mix = 0.1369934
 				oceanOpacity = 0.5
 				falloffPower = 1.1
 				falloffExp = 2
@@ -1684,7 +1672,7 @@
 				fogColorRampOffset = 0,0
 				fadeStart = 20000
 				fadeEnd = 60000
-				planetOpacity = 1
+				planetOpacity = 0
 				normalXYFudge = 1.4
 				normalZFudge = 1.18
 			}
@@ -1750,20 +1738,20 @@
 					order = 100
 					enabled = False
 					name = QuadRemoveMap
-					index = 0
+					index = -1
 				}
 				OceanFX
 				{
-					angle = 0
+					angle = -0.5387893
 					blendA = 0
 					blendB = 0
 					framesPerSecond = 10
 					oceanOpacity = 0
 					spaceAltitude = 0
-					spaceSurfaceBlend = 0
-					specColor = 0,0,0,0
-					texBlend = 0
-					txIndex = 0
+					spaceSurfaceBlend = 1
+					specColor = 1,1,1,1
+					texBlend = 0.8673706
+					txIndex = 7
 					order = 100
 					enabled = True
 					name = OceanFX
