--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Laythe.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Laythe.cfg
@@ -191,7 +191,7 @@
 		ScaledVersion
 		{
 			type = Atmospheric
-			fadeStart = 0
+			fadeStart = 55000
 			fadeEnd = 60000
 			sphericalModel = False
 			deferMesh = False
@@ -214,7 +214,7 @@
 				rimColorRamp = BUILTIN/AerialRampKerbin2
 				rimColorRampScale = 1,1
 				rimColorRampOffset = 0,0
-				localLightDirection = 0.00159654,0,0.9999987,0
+				localLightDirection = 0.009828091,-1.304649E-07,0.9999517,0
 				resourceMapScale = 1,1
 				resourceMapOffset = 0,0
 			}
@@ -1010,7 +1010,7 @@
 					order = 100
 					enabled = True
 					name = _Material_AerialPerspective
-					index = 0
+					index = -1
 				}
 				RemoveQuadMap
 				{
@@ -1021,7 +1021,7 @@
 					order = 1000
 					enabled = True
 					name = QuadRemoveMap
-					index = 0
+					index = -1
 				}
 				OceanFX
 				{
@@ -1038,7 +1038,7 @@
 					order = 100
 					enabled = True
 					name = OceanFX
-					index = 0
+					index = -1
 					Watermain
 					{
 						waterTex-0 = BUILTIN/sea-water1
