remove duplicate aerialperspectivematerial

--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Kerbin/Kerbin_DeletedMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Kerbin/Kerbin_DeletedMods.cfg
@@ -17,6 +17,7 @@
 				@removePQSMods ^= :,PQSMod_VertexHeightNoiseVertHeightCurve2§_HeightNoise§,:,VertexHeightNoiseVertHeightCurve2,:
 				@removePQSMods ^= :,PQSMod_VertexRidgedAltitudeCurve§_HeightNoise§,:,VertexRidgedAltitudeCurve,:
 				@removePQSMods ^= :,PQSLandControl§_LandClassOcean§,:,LandControl,:
+				@removePQSMods ^= :,PQSMod_AerialPerspectiveMaterial§_Material_AerialPerspective§,:,AerialPerspectiveMaterial,:
 				@removePQSMods ^= :,PQSMod_VertexHeightMap§_Height§,:,VertexHeightMap,:
 				@removePQSMods ^= :,PQSMod_MapDecal§KSC2§,:,MapDecal,:
 				@removePQSMods ^= :,PQSMod_FlattenArea§Pyramids§,:,FlattenArea,:
@@ -39,16 +40,6 @@
 				MapDecalTangent
 				{
 					name = IslandAirfield
-					SigmaDimensions = 1
-					SigmaPlaceholder = 1
-				}
-			}
-			@Mods:HAS[#removePQSMods[*,PQSMod_AerialPerspectiveMaterial§_Material_AerialPerspective§,*]]
-			{
-				MapDecalTangent
-				{
-					name = KSC
-					index = 0
 					SigmaDimensions = 1
 					SigmaPlaceholder = 1
 				}
@@ -105,14 +96,6 @@
 				AerialPerspectiveMaterial
 				{
 					name = _Material_AerialPerspective
-					index = 0
-					SigmaDimensions = 1
-					SigmaPlaceholder = 1
-				}
-				AerialPerspectiveMaterial
-				{
-					name = _Material_AerialPerspective
-					index = 1
 					SigmaDimensions = 1
 					SigmaPlaceholder = 1
 				}
