--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Kerbin/Kerbin_PQSNames.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Kerbin/Kerbin_PQSNames.cfg
@@ -154,21 +154,11 @@
 				}
 			}
 			// Set the name
-			@Mods:HAS[!AerialPerspectiveMaterial:HAS[#SigmaDimensions[1],#index[0],#name[_Material_AerialPerspective]]]
+			@Mods:HAS[!AerialPerspectiveMaterial:HAS[#SigmaDimensions[1],#name[_Material_AerialPerspective]]]
 			{
 				@AerialPerspectiveMaterial
 				{
 					&name = _Material_AerialPerspective
-					&index = 0
-				}
-			}
-			// Set the name
-			@Mods:HAS[!AerialPerspectiveMaterial:HAS[#SigmaDimensions[1],#index[1],#name[_Material_AerialPerspective]]]
-			{
-				@AerialPerspectiveMaterial
-				{
-					&name = _Material_AerialPerspective
-					&index = 0
 				}
 			}
 			// move processed node to the end
