--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Kerbin/Kerbin_Values.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Kerbin/Kerbin_Values.cfg
@@ -24,23 +24,6 @@
 	{
 		%PQS
 		{
-			%Mods {}
-			@Mods:HAS[!AerialPerspectiveMaterial[_Material_AerialPerspective]:HAS[#index[0]]]
-			{
-				AerialPerspectiveMaterial
-				{
-					name = _Material_AerialPerspective
-					index = 0
-				}
-			}
-			@Mods:HAS[!AerialPerspectiveMaterial[_Material_AerialPerspective]:HAS[#index[1]]]
-			{
-				AerialPerspectiveMaterial
-				{
-					name = _Material_AerialPerspective
-					index = 1
-				}
-			}
 			%Mods
 			{
 				%VertexSimplexHeightAbsolute[_HeightNoise]
@@ -77,13 +60,9 @@
 						}
 					}
 				}
-				@AerialPerspectiveMaterial[_Material_AerialPerspective]:HAS[#index[0]]
+				%AerialPerspectiveMaterial[_Material_AerialPerspective]
 				{
 					&atmosphereDepth = 150000
-				}
-				@AerialPerspectiveMaterial[_Material_AerialPerspective]:HAS[#index[1]]
-				{
-					&atmosphereDepth = 5000
 				}
 				%VertexHeightMap[_Height]
 				{
