--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -69,6 +69,20 @@
 			%repositionRadiusOffset = #$absoluteOffset$
 			@repositionRadiusOffset -= 22.3
 		}
+		@Ocean,*
+		{
+			@HazardousOcean,*
+			{
+				@key,* ^= :$: 0 0 0 x:
+				@key,*[0, ] *= #$../../SigmaDimensions/Resize$
+				@key,*[2, ] /= #$../../SigmaDimensions/Resize$
+				@key,*[3, ] /= #$../../SigmaDimensions/Resize$
+				@key,*[0, ] *= #$../../SigmaDimensions/landscape$
+				@key,*[2, ] /= #$../../SigmaDimensions/landscape$
+				@key,*[3, ] /= #$../../SigmaDimensions/landscape$
+				@key,* ^= : 0 0 0 x$: :
+			}
+		}
 		@SpaceCenter:HAS[#Resize[<0.75],#Resize[>0.009]]
 		{
 			@Resize = 0.75
