--- a/GameData/Sigma/Dimensions/Configs/Bodies/Fixes/caseSensitivityFix.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Fixes/caseSensitivityFix.cfg
@@ -36,6 +36,11 @@
 			@temperatureCurveIsNormalized ^= :R:r:
 			@temperatureCurveIsNormalized ^= :U:u:
 			@temperatureCurveIsNormalized ^= :E:e:
+
+			@addAFG ^= :t:T:
+			@addAFG ^= :R:r:
+			@addAFG ^= :U:u:
+			@addAFG ^= :E:e:
 		}
 		@PQS
 		{
