--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -22,6 +22,38 @@
 			@maxAltitude *= #$../SigmaDimensions/Atmosphere$
 			@altitude *= #$../SigmaDimensions/Atmosphere$
 			@atmosphereDepth *= #$../SigmaDimensions/Atmosphere$
+			
+			// pressure ASL
+			
+			@pressureCurve
+			{
+				@key,* ^= :$: 0 0 0 x:
+				@key,*[1, ] *= #$../../SigmaDimensions/atmoASL$
+				@key,*[2, ] *= #$../../SigmaDimensions/atmoASL$
+				@key,*[3, ] *= #$../../SigmaDimensions/atmoASL$
+				@key,* ^= : 0 0 0 x$: :
+			}
+			
+			// temperature ASL
+			
+			@temperatureSeaLevel *= #$../SigmaDimensions/tempASL$
+			
+			@temperatureCurve
+			{
+				@key,* ^= :$: 0 0 0 x:
+				@key,*[1, ] *= #$../../SigmaDimensions/tempASL$
+				@key,*[2, ] *= #$../../SigmaDimensions/tempASL$
+				@key,*[3, ] *= #$../../SigmaDimensions/tempASL$
+				@key,* ^= : 0 0 0 x$: :
+			}
+		}
+		@Atmosphere:HAS[~addAFG[False]]
+		{
+			%AtmosphereFromGround
+			{
+				&innerRadiusMult = 0.975
+				&outerRadiusMult = 1.025
+			}
 			@AtmosphereFromGround:HAS[~outerRadius[*]]
 			{
 				outerRadius = #$../../Properties/radius$
@@ -78,30 +110,6 @@
 			{
 				%transformScale = 0,0,0
 				!removeAFG = DEL
-			}
-			
-			// pressure ASL
-			
-			@pressureCurve
-			{
-				@key,* ^= :$: 0 0 0 x:
-				@key,*[1, ] *= #$../../SigmaDimensions/atmoASL$
-				@key,*[2, ] *= #$../../SigmaDimensions/atmoASL$
-				@key,*[3, ] *= #$../../SigmaDimensions/atmoASL$
-				@key,* ^= : 0 0 0 x$: :
-			}
-			
-			// temperature ASL
-			
-			@temperatureSeaLevel *= #$../SigmaDimensions/tempASL$
-			
-			@temperatureCurve
-			{
-				@key,* ^= :$: 0 0 0 x:
-				@key,*[1, ] *= #$../../SigmaDimensions/tempASL$
-				@key,*[2, ] *= #$../../SigmaDimensions/tempASL$
-				@key,*[3, ] *= #$../../SigmaDimensions/tempASL$
-				@key,* ^= : 0 0 0 x$: :
 			}
 		}	
 		@Atmosphere:HAS[~pressureCurveIsNormalized[True]]
