case sensitivity fix

--- a/GameData/Sigma/Dimensions/Configs/Bodies/Fixes/caseSensitivityFix.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Fixes/caseSensitivityFix.cfg
@@ -37,9 +37,10 @@
 			@temperatureCurveIsNormalized ^= :U:u:
 			@temperatureCurveIsNormalized ^= :E:e:
 
-			@addAFG ^= :t:T:
-			@addAFG ^= :R:r:
-			@addAFG ^= :U:u:
+			@addAFG ^= :f:F:
+			@addAFG ^= :A:a:
+			@addAFG ^= :L:l:
+			@addAFG ^= :S:s:
 			@addAFG ^= :E:e:
 		}
 		@PQS
