temp fix for AFG

--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Sun/Sun_Atmosphere.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Sun/Sun_Atmosphere.cfg
@@ -12,6 +12,12 @@
 			&addAFG = False
 			&temperatureSeaLevel = 5840
 			
+			// temp fix for AFG
+			%AtmosphereFromGround
+			{
+				%transformScale = 0,0,0
+			}
+			
 			%pressureCurve {}
 			%temperatureCurve {}
 			
