--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Sun/Sun_Atmosphere.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Sun/Sun_Atmosphere.cfg
@@ -7,16 +7,17 @@
 		{
 			maxAltitude = 600000
 		}
-		@Atmosphere
+		@Atmosphere:HAS[~addAFG[False]]
 		{
-			&addAFG = False
-			&temperatureSeaLevel = 5840
-			
 			// temp fix for AFG
 			%AtmosphereFromGround
 			{
 				%transformScale = 0,0,0
 			}
+		}
+		@Atmosphere
+		{
+			&temperatureSeaLevel = 5840
 			
 			%pressureCurve {}
 			%temperatureCurve {}
@@ -42,6 +43,10 @@
 				key = 500000 6000 0.001352723 0.001352723
 				key = 600000 10000 0.06371323 0
 			}
+		}
+		@Atmosphere:HAS[!AtmosphereFromGround]
+		{
+			&addAFG = False
 		}
 	}
 }
