--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -23,7 +23,13 @@
 			@altitude *= #$../SigmaDimensions/Atmosphere$
 			@atmosphereDepth *= #$../SigmaDimensions/Atmosphere$
 			
+			// temperature ASL
+			
+			@temperatureSeaLevel *= #$../SigmaDimensions/tempASL$
+			
 			// pressure ASL
+			
+			@staticPressureASL *= #$../SigmaDimensions/atmoASL$
 			
 			@pressureCurve
 			{
@@ -33,10 +39,6 @@
 				@key,*[3, ] *= #$../../SigmaDimensions/atmoASL$
 				@key,* ^= : 0 0 0 x$: :
 			}
-			
-			// temperature ASL
-			
-			@temperatureSeaLevel *= #$../SigmaDimensions/tempASL$
 			
 			@temperatureCurve
 			{
