sun template fix

--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Sun/Sun_Atmosphere.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Sun/Sun_Atmosphere.cfg
@@ -3,10 +3,6 @@
 	@Body:HAS[@Template:HAS[#name[Sun]],!Template:HAS[#removeAtmosphere[True]]]
 	{
 		%Atmosphere {}
-		@Atmosphere:HAS[~maxAltitude[*]]
-		{
-			maxAltitude = 600000
-		}
 		@Atmosphere:HAS[~addAFG[False]]
 		{
 			// temp fix for AFG
@@ -17,6 +13,7 @@
 		}
 		@Atmosphere
 		{
+			&maxAltitude = 600000
 			&staticPressureASL = 16
 			&temperatureSeaLevel = 5840
 			
@@ -44,10 +41,6 @@
 				key = 500000 6000 0.001352723 0.001352723
 				key = 600000 10000 0.06371323 0
 			}
-		}
-		@Atmosphere:HAS[!AtmosphereFromGround]
-		{
-			&addAFG = False
 		}
 	}
 }
