--- a/GameData/Sigma/Dimensions/Configs/ReDimension/rescaleSCANsat.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/rescaleSCANsat.cfg
@@ -36,8 +36,15 @@
 	{
 		@Item,*
 		{
-			@minHeightRange *= #$@SigmaDimensions/scanAltitude$
-			@maxHeightRange *= #$@SigmaDimensions/scanAltitude$
+			&maxHeightMultiplier = 1
+			&minHeightMultiplier = 1
+			&clampHeightMultiplier = 1
+			@maxHeightMultiplier *= #$@SigmaDimensions/Resize$
+			@minHeightMultiplier *= #$@SigmaDimensions/Resize$
+			@clampHeightMultiplier *= #$@SigmaDimensions/Resize$
+			@maxHeightMultiplier *= #$@SigmaDimensions/landscape$
+			@minHeightMultiplier *= #$@SigmaDimensions/landscape$
+			@clampHeightMultiplier *= #$@SigmaDimensions/landscape$
 		}
 	}
 }
