--- a/GameData/Sigma/Dimensions/Configs/ReDimension/physicsModifier.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/physicsModifier.cfg
@@ -9,4 +9,38 @@
 @PHYSICSGLOBALS:FOR[SigDim2]
 {
 	@machTemperatureScalar *= #$@SigmaDimensions/reEntryHeat$
+	@fullConvectionAreaMin *= #$@SigmaDimensions/reEntryHeat$
+	@machConvectionFactor *= #$@SigmaDimensions/reEntryHeat$
+	@machTemperatureScalar *= #$@SigmaDimensions/reEntryHeat$
+	@newtonianConvectionFactorBase *= #$@SigmaDimensions/reEntryHeat$
+	@newtonianConvectionFactorTotal *= #$@SigmaDimensions/reEntryHeat$
+	@turbulentConvectionEnd *= #$@SigmaDimensions/reEntryHeat$
+	@turbulentConvectionMult *= #$@SigmaDimensions/reEntryHeat$
+	
+	@aeroFXDensityScalar1 *= #$@SigmaDimensions/reEntryHeat$
+	@aeroFXDensityScalar1 /= #$@SigmaDimensions/Resize$
+	@aeroFXDensityScalar1 /= #$@SigmaDimensions/Resize$
+	
+	@aeroFXDensityScalar2 *= #$@SigmaDimensions/reEntryHeat$
+	@aeroFXDensityScalar2 /= #$@SigmaDimensions/Resize$
+	
+	@aeroFXDensityExponent1 *= #$@SigmaDimensions/reEntryHeat$
+	@aeroFXDensityExponent1 != 4
+	@aeroFXDensityExponent1 *= #$@SigmaDimensions/Resize$
+	@aeroFXDensityExponent1 != 0.25
+	
+	@aeroFXFullThermalFX *= #$@SigmaDimensions/reEntryHeat$
+	@aeroFXFullThermalFX != 2.90909090909091
+	@aeroFXFullThermalFX *= #$@SigmaDimensions/Resize$
+	@aeroFXFullThermalFX != 0.34375
+	
+	@aeroFXVelocityExponent /= #$@SigmaDimensions/reEntryHeat$
+	@aeroFXVelocityExponent != 3.2
+	@aeroFXVelocityExponent /= #$@SigmaDimensions/Resize$
+	@aeroFXVelocityExponent != 0.3125
+	
+	@newtonianMachTempLerpEndMach *= #$@SigmaDimensions/reEntryHeat$
+	@newtonianMachTempLerpEndMach != 4
+	@newtonianMachTempLerpEndMach *= #$@SigmaDimensions/Resize$
+	@newtonianMachTempLerpEndMach != 0.25
 }
