--- a/GameData/Sigma/Dimensions/Configs/ReDimension/physicsModifier.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/physicsModifier.cfg
@@ -13,7 +13,7 @@
 	@machConvectionFactor *= #$@SigmaDimensions/reEntryHeat$
 	@newtonianConvectionFactorBase *= #$@SigmaDimensions/reEntryHeat$
 	@newtonianConvectionFactorTotal *= #$@SigmaDimensions/reEntryHeat$
-	@turbulentConvectionEnd *= #$@SigmaDimensions/reEntryHeat$
+	@turbulentConvectionEnd /= #$@SigmaDimensions/reEntryHeat$
 	@turbulentConvectionMult *= #$@SigmaDimensions/reEntryHeat$
 	
 	@aeroFXDensityScalar1 *= #$@SigmaDimensions/reEntryHeat$
