--- a/GameData/Sigma/Dimensions/Configs/ReDimension/physicsModifier.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/physicsModifier.cfg
@@ -23,9 +23,9 @@
 	@aeroFXDensityScalar2 *= #$@SigmaDimensions/reEntryHeat$
 	@aeroFXDensityScalar2 /= #$@SigmaDimensions/Resize$
 	
-	@aeroFXDensityExponent1 *= #$@SigmaDimensions/reEntryHeat$
+	@aeroFXDensityExponent1 /= #$@SigmaDimensions/reEntryHeat$
 	@aeroFXDensityExponent1 != 4
-	@aeroFXDensityExponent1 *= #$@SigmaDimensions/Resize$
+	@aeroFXDensityExponent1 /= #$@SigmaDimensions/Resize$
 	@aeroFXDensityExponent1 != 0.25
 	
 	@aeroFXFullThermalFX *= #$@SigmaDimensions/reEntryHeat$
