--- a/GameData/Sigma/Dimensions/Configs/ReDimension/physicsModifier.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/physicsModifier.cfg
@@ -9,12 +9,7 @@
 @PHYSICSGLOBALS:FOR[SigDim2]
 {
 	@machTemperatureScalar *= #$@SigmaDimensions/reEntryHeat$
-	@fullConvectionAreaMin *= #$@SigmaDimensions/reEntryHeat$
-	@machConvectionFactor *= #$@SigmaDimensions/reEntryHeat$
-	@newtonianConvectionFactorBase *= #$@SigmaDimensions/reEntryHeat$
 	@newtonianConvectionFactorTotal *= #$@SigmaDimensions/reEntryHeat$
-	@turbulentConvectionEnd /= #$@SigmaDimensions/reEntryHeat$
-	@turbulentConvectionMult *= #$@SigmaDimensions/reEntryHeat$
 	
 	@aeroFXDensityScalar1 *= #$@SigmaDimensions/reEntryHeat$
 	@aeroFXDensityScalar1 /= #$@SigmaDimensions/Resize$
@@ -23,23 +18,41 @@
 	@aeroFXDensityScalar2 *= #$@SigmaDimensions/reEntryHeat$
 	@aeroFXDensityScalar2 /= #$@SigmaDimensions/Resize$
 	
-	@aeroFXDensityExponent1 /= #$@SigmaDimensions/reEntryHeat$
-	@aeroFXDensityExponent1 != 4
-	@aeroFXDensityExponent1 /= #$@SigmaDimensions/Resize$
-	@aeroFXDensityExponent1 != 0.25
-	
 	@aeroFXFullThermalFX *= #$@SigmaDimensions/reEntryHeat$
 	@aeroFXFullThermalFX != 2.90909090909091
 	@aeroFXFullThermalFX *= #$@SigmaDimensions/Resize$
 	@aeroFXFullThermalFX != 0.34375
+	
+	@aeroFXDensityExponent1 != 6.66666666666667
+	@aeroFXDensityExponent1 *= #$@SigmaDimensions/Resize$
+	@aeroFXDensityExponent1 != 0.15
 	
 	@aeroFXVelocityExponent /= #$@SigmaDimensions/reEntryHeat$
 	@aeroFXVelocityExponent != 3.2
 	@aeroFXVelocityExponent /= #$@SigmaDimensions/Resize$
 	@aeroFXVelocityExponent != 0.3125
 	
-	@newtonianMachTempLerpEndMach *= #$@SigmaDimensions/reEntryHeat$
-	@newtonianMachTempLerpEndMach != 4
-	@newtonianMachTempLerpEndMach *= #$@SigmaDimensions/Resize$
-	@newtonianMachTempLerpEndMach != 0.25
+	@newtonianMachTempLerpEndMach != 10
+	@newtonianMachTempLerpEndMach /= #$@SigmaDimensions/Resize$
+	@newtonianMachTempLerpEndMach != 0.1
+	
+	@turbulentConvectionEnd != 3.33333333333333
+	@turbulentConvectionEnd *= #$@SigmaDimensions/Resize$
+	@turbulentConvectionEnd != 0.3
+	
+	@newtonianConvectionFactorBase != 3.33333333333333
+	@newtonianConvectionFactorBase /= #$@SigmaDimensions/Resize$
+	@newtonianConvectionFactorBase != 0.3
+	
+	@turbulentConvectionMult != 3.33333333333333
+	@turbulentConvectionMult /= #$@SigmaDimensions/Resize$
+	@turbulentConvectionMult != 0.3
+	
+	@machConvectionFactor != 2
+	@machConvectionFactor /= #$@SigmaDimensions/Resize$
+	@machConvectionFactor != 0.5
+	
+	@fullConvectionAreaMin != 3.33333333333333
+	@fullConvectionAreaMin /= #$@SigmaDimensions/Resize$
+	@fullConvectionAreaMin != 0.3
 }
