--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Bop.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Bop.cfg
@@ -26,6 +26,7 @@
 			hillSphere = 2029674.44211376
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
+			navballSwitchRadiusMultLow = 0.055
 			biomeMap = BUILTIN/bop_biome
 			nonExactThreshold = -1
 			exactSearch = False
