--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Dres.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Dres.cfg
@@ -26,6 +26,7 @@
 			hillSphere = 92059713.5005964
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
+			navballSwitchRadiusMultLow = 0.055
 			biomeMap = BUILTIN/dres_biome
 			nonExactThreshold = -1
 			exactSearch = False
