--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Gilly.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Gilly.cfg
@@ -26,6 +26,7 @@
 			hillSphere = 142427.423478875
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
+			navballSwitchRadiusMultLow = 0.055
 			biomeMap = BUILTIN/gilly_biome
 			nonExactThreshold = -1
 			exactSearch = False
