--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Ike.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Ike.cfg
@@ -26,6 +26,7 @@
 			hillSphere = 1225978.58343315
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
+			navballSwitchRadiusMultLow = 0.055
 			biomeMap = BUILTIN/ike_biome
 			nonExactThreshold = -1
 			exactSearch = False
