--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Jool.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Jool.cfg
@@ -26,6 +26,7 @@
 			hillSphere = 4065824625.34358
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
+			navballSwitchRadiusMultLow = 0.055
 			nonExactThreshold = 0.05
 			exactSearch = False
 			useTheInName = False
