--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Kerbin.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Kerbin.cfg
@@ -26,6 +26,7 @@
 			hillSphere = 196414707.77848
 			solarRotationPeriod = True
 			navballSwitchRadiusMult = 0.06
+			navballSwitchRadiusMultLow = 0.055
 			biomeMap = BUILTIN/kerbin_biome
 			nonExactThreshold = -1
 			exactSearch = False
