--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Laythe.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Laythe.cfg
@@ -26,6 +26,7 @@
 			hillSphere = 5186318.66159496
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
+			navballSwitchRadiusMultLow = 0.055
 			biomeMap = BUILTIN/laythe_biome
 			nonExactThreshold = -1
 			exactSearch = False
