--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Moho.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Moho.cfg
@@ -26,6 +26,7 @@
 			hillSphere = 22060314.8155466
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
+			navballSwitchRadiusMultLow = 0.055
 			biomeMap = BUILTIN/moho_biome
 			nonExactThreshold = -1
 			exactSearch = False
