--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Vall.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Vall.cfg
@@ -26,6 +26,7 @@
 			hillSphere = 3893201.55262435
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
+			navballSwitchRadiusMultLow = 0.055
 			biomeMap = BUILTIN/vall_biome
 			nonExactThreshold = -1
 			exactSearch = False
