--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Duna.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Duna.cfg
@@ -26,6 +26,7 @@
 			hillSphere = 125063736.748336
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
+			navballSwitchRadiusMultLow = 0.055
 			biomeMap = BUILTIN/duna_biome
 			nonExactThreshold = -1
 			exactSearch = False
