--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Minmus.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Minmus.cfg
@@ -26,6 +26,7 @@
 			hillSphere = 3730392.49065433
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
+			navballSwitchRadiusMultLow = 0.055
 			biomeMap = BUILTIN/minmus_biome
 			nonExactThreshold = -1
 			exactSearch = False
