--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Mun.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Mun.cfg
@@ -26,6 +26,7 @@
 			hillSphere = 3170563.33757116
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
+			navballSwitchRadiusMultLow = 0.055
 			biomeMap = BUILTIN/mun_biome
 			nonExactThreshold = -1
 			exactSearch = False
