--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Sun.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Sun.cfg
@@ -26,6 +26,7 @@
 			hillSphere = Infinity
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
+			navballSwitchRadiusMultLow = 0.055
 			nonExactThreshold = 0.05
 			exactSearch = False
 			useTheInName = True
