--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Tylo.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Tylo.cfg
@@ -26,6 +26,7 @@
 			hillSphere = 14757877.6267184
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
+			navballSwitchRadiusMultLow = 0.055
 			biomeMap = BUILTIN/tylo_biome
 			nonExactThreshold = -1
 			exactSearch = False
