--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Duna.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Duna.cfg
@@ -111,6 +111,7 @@
 			temperatureSeaLevel = 250
 			ambientColor = 0.3058824,0.187128,0.2347621,1
 			lightColor = 0.5094656,0.5884027,0.6431373,0
+			addAFG = True
 			pressureCurve
 			{
 				key = 0 6.755 0 -0.0007
