--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Eve.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Eve.cfg
@@ -123,6 +123,7 @@
 			temperatureSeaLevel = 408
 			ambientColor = 0.2235352,0.1943253,0.3058824,1
 			lightColor = 0.4498853,0.5149254,0.3473222,1
+			addAFG = True
 			pressureCurve
 			{
 				key = 0 506.625 -0.08693577 -0.08693577
