--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Jool.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Jool.cfg
@@ -77,6 +77,7 @@
 			temperatureSeaLevel = 200
 			ambientColor = 0.07548209,0.2089552,0.06861217,1
 			lightColor = 0.6745098,0.5960785,0.8509804,0
+			addAFG = True
 			pressureCurve
 			{
 				key = 0 1519.875 0 -0.05753474
