--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Kerbin.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Kerbin.cfg
@@ -135,6 +135,7 @@
 			temperatureSeaLevel = 287
 			ambientColor = 0.2431373,0.2509804,0.254902,1
 			lightColor = 0.65,0.57,0.475,0.5
+			addAFG = True
 			pressureCurve
 			{
 				key = 0 101.325 0 -0.01501631
