--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Laythe.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Laythe.cfg
@@ -111,6 +111,7 @@
 			temperatureSeaLevel = 282
 			ambientColor = 0.187128,0.2393932,0.3058824,1
 			lightColor = 0.8432836,0.6682193,0.4983039,0
+			addAFG = True
 			pressureCurve
 			{
 				key = 0 60.795 0 -0.005216384
