--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Duna.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Duna.cfg
@@ -210,7 +210,7 @@
 				rimColorRamp = BUILTIN/desert_atmogradient
 				rimColorRampScale = 1,1
 				rimColorRampOffset = 0,0
-				localLightDirection = 0.007757901,-1.304649E-07,0.9999699,0
+				localLightDirection = 0.003771693,-1.30465E-07,0.999993,0
 				resourceMapScale = 1,1
 				resourceMapOffset = 0,0
 			}
