--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Laythe.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Laythe.cfg
@@ -216,7 +216,7 @@
 				rimColorRamp = BUILTIN/AerialRampKerbin2
 				rimColorRampScale = 1,1
 				rimColorRampOffset = 0,0
-				localLightDirection = 0.009828091,-1.304649E-07,0.9999517,0
+				localLightDirection = 0.004778683,-1.30465E-07,0.9999886,0
 				resourceMapScale = 1,1
 				resourceMapOffset = 0,0
 			}
