non-SD related changes

--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Eve.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Eve.cfg
@@ -632,7 +632,7 @@
 					{
 						Scatter
 						{
-							materialType = Diffuse
+							materialType = DiffuseWrapped
 							mesh = BUILTIN/boulder
 							castShadows = True
 							densityFactor = 0.25
@@ -652,10 +652,11 @@
 							science = False
 							Material
 							{
-								color = 0.6791044,0.6791044,0.6791044,1
 								mainTex = BUILTIN/lunar cliff face
 								mainTexScale = 1,1
 								mainTexOffset = 0,0
+								color = 0.4617738,0.2195069,0.5147059,0.397
+								diff = 0.1
 							}
 							Experiment
 							{
