--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Kerbin.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Kerbin.cfg
@@ -968,7 +968,7 @@
 							name = DesertMountains
 							latDelta = 1
 							latitudeDouble = False
-							lonDelta = 0.476008917228375
+							lonDelta = 0.491633551061994
 							minimumRealHeight = 0
 							noiseBlend = 0.5
 							noiseColor = 0.2462686,0.2286743,0.2144087,1
@@ -1280,7 +1280,7 @@
 							coveragePersistance = 0.7
 							coverageSeed = 4563456
 							name = Savannah
-							latDelta = 0.505546780473614
+							latDelta = 0.507311485021372
 							latitudeDouble = False
 							lonDelta = 0
 							minimumRealHeight = 0
@@ -1360,7 +1360,7 @@
 					{
 						Scatter
 						{
-							materialType = CutoutDiffuse
+							materialType = AerialCutout
 							mesh = BUILTIN/mapletree
 							castShadows = True
 							densityFactor = 0.5
@@ -1380,11 +1380,14 @@
 							science = False
 							Material
 							{
-								color = 0.5447761,0.5447761,0.5447761,1
+								color = 0.1323529,0.1323529,0.1323529,0.434
 								mainTex = BUILTIN/mapletree
 								mainTexScale = 1,1
 								mainTexOffset = 0,0
-								cutoff = 0.4402985
+								texCutoff = 0.5
+								fogColor = 0.8823529,0.8823529,1,1
+								heightFallOff = 0.2
+								globalDensity = -1.5E-05
 							}
 							Experiment
 							{
@@ -1450,8 +1453,8 @@
 								mainTex = BUILTIN/rock00
 								mainTexScale = 1,1
 								mainTexOffset = 0,0
-								color = 0.2537314,0.2194097,0.1003564,0.4588235
-								diff = 0.4
+								color = 1,1,1,0.622
+								diff = 0.2
 							}
 							Experiment
 							{
@@ -1661,7 +1664,7 @@
 				displacement = 0.05
 				texDisplacement = -0.31
 				dispFreq = 0.15
-				mix = 0.1369934
+				mix = 0.1078949
 				oceanOpacity = 0.5
 				falloffPower = 1.1
 				falloffExp = 2
@@ -1752,8 +1755,8 @@
 					spaceAltitude = 0
 					spaceSurfaceBlend = 1
 					specColor = 1,1,1,1
-					texBlend = 0.8673706
-					txIndex = 7
+					texBlend = 0.1078949
+					txIndex = 2
 					order = 100
 					enabled = True
 					name = OceanFX
