--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Laythe.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Laythe.cfg
@@ -787,7 +787,7 @@
 					{
 						Scatter
 						{
-							materialType = BumpedDiffuse
+							materialType = DiffuseWrapped
 							mesh = BUILTIN/boulder
 							castShadows = True
 							densityFactor = 1
@@ -807,13 +807,11 @@
 							science = False
 							Material
 							{
-								color = 1,1,1,1
 								mainTex = BUILTIN/brown_cliff
 								mainTexScale = 1,1
 								mainTexOffset = 0,0
-								bumpMap = BUILTIN/bouldernormal
-								bumpMapScale = 1,1
-								bumpMapOffset = 0,0
+								color = 1,1,1,0.422
+								diff = 0.2
 							}
 							Experiment
 							{
