--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Minmus.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Minmus.cfg
@@ -545,7 +545,7 @@
 								mainTex = BUILTIN/rock00
 								mainTexScale = 1,1
 								mainTexOffset = 0,0
-								color = 1,1,1,0.6862745
+								color = 0.2272014,0.2867647,0.2192906,0.6862745
 								diff = 0.6
 							}
 							Experiment
