--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Sun.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Sun.cfg
@@ -149,6 +149,7 @@
 				sunAU = 13599840256
 				luminosity = 1360
 				insolation = 0.15
+				radiationFactor = 1
 				brightnessCurve
 				{
 					key = -0.01573471 0.217353 1.706627 1.706627
