--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Kerbin.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Kerbin.cfg
@@ -1388,6 +1388,7 @@
 								fogColor = 0.8823529,0.8823529,1,1
 								heightFallOff = 0.2
 								globalDensity = -1.5E-05
+								atmosphereDepth = 5000
 							}
 							Experiment
 							{
