--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Laythe.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Laythe.cfg
@@ -105,7 +105,7 @@
 			gasMassLapseRate = 4.84741125702493
 			atmosphereMolarMass = 0.0289644002914429
 			pressureCurveIsNormalized = False
-			staticPressureASL = 81.0599975585938
+			staticPressureASL = 60.795
 			temperatureCurveIsNormalized = False
 			temperatureLapseRate = 0.00564
 			temperatureSeaLevel = 282
