--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Laythe/Laythe_Atmosphere.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Laythe/Laythe_Atmosphere.cfg
@@ -10,7 +10,7 @@
 		@Atmosphere
 		{
 			
-			&staticPressureASL = 81.0599975585938
+			&staticPressureASL = 60.795
 			&temperatureSeaLevel = 282
 			
 			%pressureCurve {}
