eeloo template fix

--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Eeloo/Eeloo_PQSNames.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Eeloo/Eeloo_PQSNames.cfg
@@ -1,7 +1,7 @@
 // LandControl
 @Kopernicus:HAS[@Body:HAS[@Template[Eeloo]:HAS[~removeAllPQSMods[True]],@PQS:HAS[@Mods:HAS[@LandControl:HAS[~SigmaDimensions[1]]]]]]:FOR[SigDim]
 {
-	@Body:HAS[@Template[Eeloo],@PQS:HAS[@Mods:HAS[@LandControl:HAS[~SigmaDimensions[1]]]]]
+	@Body:HAS[@Template[Eeloo]:HAS[~removeAllPQSMods[True]],@PQS:HAS[@Mods:HAS[@LandControl:HAS[~SigmaDimensions[1]]]]]
 	{
 		@PQS:HAS[@Mods:HAS[@LandControl:HAS[~SigmaDimensions[1]]]]
 		{
@@ -36,7 +36,7 @@
 // AerialPerspectiveMaterial
 @Kopernicus:HAS[@Body:HAS[@Template[Eeloo]:HAS[~removeAllPQSMods[True]],@PQS:HAS[@Mods:HAS[@AerialPerspectiveMaterial:HAS[~SigmaDimensions[1]]]]]]:FOR[SigDim]
 {
-	@Body:HAS[@Template[Eeloo],@PQS:HAS[@Mods:HAS[@AerialPerspectiveMaterial:HAS[~SigmaDimensions[1]]]]]
+	@Body:HAS[@Template[Eeloo]:HAS[~removeAllPQSMods[True]],@PQS:HAS[@Mods:HAS[@AerialPerspectiveMaterial:HAS[~SigmaDimensions[1]]]]]
 	{
 		@PQS:HAS[@Mods:HAS[@AerialPerspectiveMaterial:HAS[~SigmaDimensions[1]]]]
 		{
@@ -71,7 +71,7 @@
 // VertexHeightMap
 @Kopernicus:HAS[@Body:HAS[@Template[Eeloo]:HAS[~removeAllPQSMods[True]],@PQS:HAS[@Mods:HAS[@VertexHeightMap:HAS[~SigmaDimensions[1]]]]]]:FOR[SigDim]
 {
-	@Body:HAS[@Template[Eeloo],@PQS:HAS[@Mods:HAS[@VertexHeightMap:HAS[~SigmaDimensions[1]]]]]
+	@Body:HAS[@Template[Eeloo]:HAS[~removeAllPQSMods[True]],@PQS:HAS[@Mods:HAS[@VertexHeightMap:HAS[~SigmaDimensions[1]]]]]
 	{
 		@PQS:HAS[@Mods:HAS[@VertexHeightMap:HAS[~SigmaDimensions[1]]]]
 		{
@@ -106,7 +106,7 @@
 // VertexSimplexHeight
 @Kopernicus:HAS[@Body:HAS[@Template[Eeloo]:HAS[~removeAllPQSMods[True]],@PQS:HAS[@Mods:HAS[@VertexSimplexHeight:HAS[~SigmaDimensions[1]]]]]]:FOR[SigDim]
 {
-	@Body:HAS[@Template[Eeloo],@PQS:HAS[@Mods:HAS[@VertexSimplexHeight:HAS[~SigmaDimensions[1]]]]]
+	@Body:HAS[@Template[Eeloo]:HAS[~removeAllPQSMods[True]],@PQS:HAS[@Mods:HAS[@VertexSimplexHeight:HAS[~SigmaDimensions[1]]]]]
 	{
 		@PQS:HAS[@Mods:HAS[@VertexSimplexHeight:HAS[~SigmaDimensions[1]]]]
 		{
@@ -141,7 +141,7 @@
 // VertexHeightNoise
 @Kopernicus:HAS[@Body:HAS[@Template[Eeloo]:HAS[~removeAllPQSMods[True]],@PQS:HAS[@Mods:HAS[@VertexHeightNoise:HAS[~SigmaDimensions[1]]]]]]:FOR[SigDim]
 {
-	@Body:HAS[@Template[Eeloo],@PQS:HAS[@Mods:HAS[@VertexHeightNoise:HAS[~SigmaDimensions[1]]]]]
+	@Body:HAS[@Template[Eeloo]:HAS[~removeAllPQSMods[True]],@PQS:HAS[@Mods:HAS[@VertexHeightNoise:HAS[~SigmaDimensions[1]]]]]
 	{
 		@PQS:HAS[@Mods:HAS[@VertexHeightNoise:HAS[~SigmaDimensions[1]]]]
 		{
@@ -176,7 +176,7 @@
 // VertexVoronoi
 @Kopernicus:HAS[@Body:HAS[@Template[Eeloo]:HAS[~removeAllPQSMods[True]],@PQS:HAS[@Mods:HAS[@VertexVoronoi:HAS[~SigmaDimensions[1]]]]]]:FOR[SigDim]
 {
-	@Body:HAS[@Template[Eeloo],@PQS:HAS[@Mods:HAS[@VertexVoronoi:HAS[~SigmaDimensions[1]]]]]
+	@Body:HAS[@Template[Eeloo]:HAS[~removeAllPQSMods[True]],@PQS:HAS[@Mods:HAS[@VertexVoronoi:HAS[~SigmaDimensions[1]]]]]
 	{
 		@PQS:HAS[@Mods:HAS[@VertexVoronoi:HAS[~SigmaDimensions[1]]]]
 		{
@@ -211,7 +211,7 @@
 // FlattenOcean
 @Kopernicus:HAS[@Body:HAS[@Template[Eeloo]:HAS[~removeAllPQSMods[True]],@PQS:HAS[@Mods:HAS[@FlattenOcean:HAS[~SigmaDimensions[1]]]]]]:FOR[SigDim]
 {
-	@Body:HAS[@Template[Eeloo],@PQS:HAS[@Mods:HAS[@FlattenOcean:HAS[~SigmaDimensions[1]]]]]
+	@Body:HAS[@Template[Eeloo]:HAS[~removeAllPQSMods[True]],@PQS:HAS[@Mods:HAS[@FlattenOcean:HAS[~SigmaDimensions[1]]]]]
 	{
 		@PQS:HAS[@Mods:HAS[@FlattenOcean:HAS[~SigmaDimensions[1]]]]
 		{
@@ -246,7 +246,7 @@
 // VertexHeightNoiseVertHeight
 @Kopernicus:HAS[@Body:HAS[@Template[Eeloo]:HAS[~removeAllPQSMods[True]],@PQS:HAS[@Mods:HAS[@VertexHeightNoiseVertHeight:HAS[~SigmaDimensions[1]]]]]]:FOR[SigDim]
 {
-	@Body:HAS[@Template[Eeloo],@PQS:HAS[@Mods:HAS[@VertexHeightNoiseVertHeight:HAS[~SigmaDimensions[1]]]]]
+	@Body:HAS[@Template[Eeloo]:HAS[~removeAllPQSMods[True]],@PQS:HAS[@Mods:HAS[@VertexHeightNoiseVertHeight:HAS[~SigmaDimensions[1]]]]]
 	{
 		@PQS:HAS[@Mods:HAS[@VertexHeightNoiseVertHeight:HAS[~SigmaDimensions[1]]]]
 		{
